--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.username=root
 spring.datasource.password=rootpass
 
 spring.jpa.hibernate.ddl-auto=update
+
+spring.mvc.View.prefix=/WEB-INF/
+spring.mvc.View.suffix=.jsp
